syntax = "proto3";

package notification;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.adia.notification";
option java_outer_classname = "NotificationProto";

// Service de notifications
service NotificationService {
  rpc StreamNotifications(UserRequest) returns (stream Notification);
  rpc CreateNotification(NewNotificationRequest) returns (Notification);
  rpc NotifyGroupInvite(GroupInviteRequest) returns (Notification);
  rpc getAllNotifications(UserRequest) returns (NotificationList); // when user login get Notifi history whith count of unread
  rpc SendNotification (SendNotifReq) returns (google.protobuf.Empty);
  rpc MarkAsRead (ReadReq) returns (google.protobuf.Empty);
}

message UserRequest {
  string userId = 1;
}

message Notification {
  string id = 1;
  string receiverId = 2;
  string senderId = 3;
  string content = 4;
  string title = 6;
  string link = 7; // Optional URL or frontend route (e.g. "/group/123")
  google.protobuf.Timestamp createdAt = 8;
  bool unread = 9;
}

message SendNotifReq {
  string receiverId = 2;
  string senderId = 3;
  string content = 4;
  string title = 6;
}

message NotificationList {
  repeated Notification notifications = 1;
  int32 unreadCount = 2;
}

message NewNotificationRequest {
  string userId = 1;
  string message = 2;
}

message GroupInviteRequest {
  string inviterId = 1;
  string inviteeId = 2;
  string groupId = 3;
}

message ReadReq {
  repeated Notification notifications = 1;
}